<resources>
    <string name="app_name">TEST123</string>
    <string name="witaj_janoo820">Witaj, Janoo820!</string>
    <string name="poka_profil">Pokaż Profil</string>
    <string name="kup_bilet">Kup Bilet</string>
    <string name="historia_bilet_w">Historia biletów</string>
    <string name="rozk_ad_jazdy">Rozkład jazdy</string>
    <string name="utw_rz_zg_oszenie">Utwórz zgłoszenie</string>
    <string name="mandaty">Mandaty</string>
    <string name="wyloguj">Wyloguj</string>
    <string name="profil">Profil</string>
    <string name="profil123">Profil</string>
    <string name="zaloguj_si">Zaloguj się</string>
    <string name="dodaj_ulge">Dodaj Ulgę</string>
    <string name="rodzaj_ulgi">Rodzaj ulgi</string>
    <string name="Numer_ID">Numer ID dokumentu</string>
    <string name="Wyslij">Wyślij</string>
    <string name="Jednorazowy">Bilet jednorazowy</string>
    <string name="Krotkookresowy">Bilet krótkookresowy</string>
    <string name="Miesieczny">Bilet miesięczny</string>
    <string name="Trzymiesieczny">Bilet trzymiesięczny</string>
    <string name="Roczny">Bilet roczny</string>
    <string name="Bilet_normalny">Jednoliniowy Normalny</string>
    <string name="Bilet_ulgowy">Jednoliniowy Ulgowy</string>
    <string name="Bilet_30_normalny">30-minutowy Normalny</string>
    <string name="Bilet_30_ulgowy">30-minutowy Ulgowy</string>
    <string name="Bilet_60_normalny">60-minutowy Normalny</string>
    <string name="Bilet_60_ulogwy">60-minutowy Ulgowy</string>
    <string name="Tickets_amout">Ilość Biletów</string>
    <string name="Ticket_line_number">Nr lini</string>
    <string name="Ticket_type">Rodzaj biletu</string>
    <string name="Ticket_price_amout">Kwota</string>
    <string name="Button_pay">Opłać</string>
    <string name="Date_as_word">Data</string>
    <string name="Image_desc_start">Image of start line</string>
    <string name="todo">idk co to</string>
    <string name="znizkaString">Masz już zniżkę!</string> 
    <string name="doba_1">Bilet całodobowy</string>
    <string name="doba_2">Bilet dwudobowy</string>
    <string name="doba_3">Bilet trzydobowy</string>
    <string name="oplac_mandat">Opłać mandat</string>
    <string name="historia_mandatów">Historia mandatów</string>
    <string name="zaloguj">Zaloguj się</string>
    <string name="count">Ilość biletów:</string>
    <string name="count1">Ilość biletów</string>

    <string-array name="discounts">
        <item>Student(50%)</item>
        <item>Weteran wojenny(70%)</item>
        <item>Pracownik(90%)</item>
        <item>Uczeń(30%)</item>
        <item>Honorowy Dawca Krwi(60%)</item>
    </string-array>
    <string-array name="reports_types">
        <item>Problem z kierowcą</item>
        <item>Problem z biletami</item>
        <item>Problem z ulgami</item>
        <item>Usterka</item>
        <item>Inne</item>
    </string-array>
</resources>
