<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/header"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_alignParentTop="true"
    android:gravity="center"
    android:orientation="vertical">

    <include layout="@layout/header" />

        <!-- Content below header and above footer -->

    <LinearLayout
    android:id="@+id/buy_ticket_menu"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
        tools:ignore="NotSibling">

        <Button
            android:id="@+id/Jednoliniowy_normalny"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_margin="8dp"
            android:background="@drawable/main_menu_btn"
            android:gravity="center"
            android:text="@string/Bilet_normalny"
            android:textAlignment="center"
            android:textSize="16sp"
            android:textAllCaps="false"
            android:textStyle="bold"/>

        <Button
            android:id="@+id/Jednoliniowy_ulgowy"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_margin="8dp"
            android:background="@drawable/main_menu_btn"
            android:gravity="center"
            android:text="@string/Bilet_ulgowy"
            android:textAlignment="center"
            android:textSize="16sp"
            android:textAllCaps="false"
            android:textStyle="bold"/>

        <Button
            android:id="@+id/Normalny_30"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_margin="8dp"
            android:background="@drawable/main_menu_btn"
            android:gravity="center"
            android:text="@string/Bilet_30_normalny"
            android:textAlignment="center"
            android:textSize="16sp"
            android:textAllCaps="false"
            android:textStyle="bold"/>

        <Button
            android:id="@+id/Ulgowy_30"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_margin="8dp"
            android:background="@drawable/main_menu_btn"
            android:gravity="center"
            android:text="@string/Bilet_30_ulgowy"
            android:textAlignment="center"
            android:textSize="16sp"
            android:textAllCaps="false"
            android:textStyle="bold"/>

        <Button
            android:id="@+id/Normalny_60"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_margin="8dp"
            android:background="@drawable/main_menu_btn"
            android:gravity="center"
            android:text="@string/Bilet_60_normalny"
            android:textAlignment="center"
            android:textSize="16sp"
            android:textAllCaps="false"
            android:textStyle="bold"/>

        <Button
            android:id="@+id/Ulgowy_60"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_margin="8dp"
            android:background="@drawable/main_menu_btn"
            android:gravity="center"
            android:text="@string/Bilet_60_ulogwy"
            android:textAlignment="center"
            android:textSize="16sp"
            android:textAllCaps="false"
            android:textStyle="bold"/>




    </LinearLayout>
</LinearLayout>