<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical">
    <include layout="@layout/header" />

    <LinearLayout
        android:id="@+id/m1"
        android:layout_width="350dp"
        android:layout_height="360dp"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        android:background="@drawable/report_shape"
        android:orientation="vertical" >
        <LinearLayout
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:orientation="vertical"
            android:layout_gravity="center"
            android:layout_marginTop="20dp">
            <TextView
                android:layout_width="130dp"
                android:layout_height="20dp"
                android:textColor="@color/black"
                android:text="@string/Ticket_type"
                android:textStyle="bold">
            </TextView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:text="@string/Bilet_30_ulgowy"
                android:textColor="@color/black"
                android:textStyle="normal">

            </TextView>

        </LinearLayout>



    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:layout_margin="8dp">
        <TextView
            android:layout_width="300dp"
            android:layout_height="20dp"
            android:textColor="@color/black"
            android:text="@string/Tickets_amout"
            android:textStyle="bold"/>
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/Tickets_amount"
            android:layout_width="290dp"
            android:layout_height="40dp"
            android:layout_marginHorizontal="5dp"
            android:ems="10"
            android:textColor="@color/black"
            android:layout_margin="2dp"
            android:background="@drawable/input_shape_round"
            android:gravity="start|top"
            android:imeOptions="actionDone"
            android:inputType="textMultiLine|textCapSentences"/>
    </LinearLayout>

        <LinearLayout
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:orientation="vertical"
            android:layout_gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:text="@string/Ticket_price_amout"
                android:textStyle="bold">
            </TextView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="4,00 PLN"
                android:textColor="@color/black"
                android:textStyle="bold">

            </TextView>

        </LinearLayout>

    <Button
        android:id="@+id/send_discount"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:background="@drawable/pay_button_orange"
        android:textColor="@color/white"
        android:gravity="center"
        android:text="@string/Button_pay"
        android:textAlignment="center"
        android:textSize="16sp" />



</LinearLayout>
</LinearLayout>