<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/m1"
        android:layout_width="350dp"
        android:layout_height="257dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:background="@drawable/report_shape"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Ticket_type"
                android:textColor="@color/black"
                android:textSize="24dp"
                android:textStyle="bold">

            </TextView>

            <TextView
                android:id="@+id/ticket_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Bilet_30_ulgowy"
                android:textColor="@color/black"
                android:textSize="18dp"
                android:textStyle="normal">

            </TextView>

        </LinearLayout>


        <LinearLayout
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Ticket_price_amout"
                android:textColor="@color/black"
                android:textStyle="bold"></TextView>

            <TextView
                android:id="@+id/ticket_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="4,00 PLN"
                android:textColor="@color/black"
                android:textStyle="bold">

            </TextView>

        </LinearLayout>

        <Button
            android:id="@+id/buy_ticket"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:background="@drawable/pay_button_orange"
            android:gravity="center"
            android:paddingBottom="5dp"
            android:text="@string/Button_pay"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="16sp" />


    </LinearLayout>
</LinearLayout>