<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical">


    <include layout="@layout/header" />


    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:layout_margin="8dp">

        <TextView
            android:layout_width="130dp"
            android:layout_height="20dp"
            android:textColor="@color/black"
            android:text="@string/rodzaj_ulgi"
            android:textStyle="bold">


        </TextView>

        <Spinner
            android:id="@+id/discount_spinner"
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:paddingBottom="5dp"
            android:background="@drawable/input_shape_round"/>

    </LinearLayout>


    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:layout_margin="8dp">
        <TextView
            android:layout_width="300dp"
            android:layout_height="20dp"
            android:textColor="@color/black"
            android:text="@string/Numer_ID"
            android:textStyle="bold"/>
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email"
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:paddingBottom="5dp"
            android:ems="10"
            android:padding="8dp"
            android:textColor="@color/black"
            android:background="@drawable/input_shape_round" />

    </LinearLayout>


    <Button
        android:id="@+id/send_discount"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="8dp"
        android:background="@drawable/client_profile_btn_edit"
        android:gravity="center"
        android:text="@string/Wyslij"
        android:textAlignment="center"
        android:paddingBottom="5dp"
        android:textSize="16sp"
        android:textColor="@color/white"
        android:textStyle="bold"/>

</LinearLayout>

