<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/m2"
            android:layout_width="350dp"
            android:layout_height="400dp"
            android:layout_marginTop="20dp"
            android:layout_gravity="center"
            android:background="@drawable/report_shape"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="center"
                android:layout_marginTop="5dp">
                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="20dp"
                    android:textColor="@color/black"
                    android:text="@string/Ticket_type"
                    android:textStyle="bold">
                </TextView>

                <TextView
                    android:id="@+id/ticket_history_element_type"
                    android:layout_width="fill_parent"
                    android:layout_height="20dp"
                    android:text="@string/Bilet_normalny"
                    android:textColor="@color/black"
                    android:textStyle="normal">

                </TextView>
                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="20dp"
                    android:textColor="@color/black"
                    android:text="Data zakupu"
                    android:textStyle="bold"
                    android:layout_marginTop="5dp">
                </TextView>

                <TextView
                    android:id="@+id/ticket_history_element_date"
                    android:layout_width="fill_parent"
                    android:layout_height="20dp"
                    android:text="27.01.2022"
                    android:textColor="@color/black"
                    android:textStyle="normal">
                </TextView>

                <TextView
                    android:id="@+id/line_number_date"
                    android:layout_width="fill_parent"
                    android:layout_height="20dp"
                    android:textColor="@color/black"
                    android:text="@string/Ticket_line_number"
                    android:textStyle="bold"
                    android:layout_marginTop="5dp">
                </TextView>

                <TextView
                    android:id="@+id/ticket_history_element_line_number"
                    android:layout_width="fill_parent"
                    android:layout_height="20dp"
                    android:text="105"
                    android:textColor="@color/black"
                    android:textStyle="normal">
                </TextView>

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="20dp"
                    android:textColor="@color/black"
                    android:text="@string/count1"
                    android:textStyle="bold"
                    android:layout_marginTop="5dp">
                </TextView>

                <TextView
                    android:id="@+id/count"
                    android:layout_width="fill_parent"
                    android:layout_height="20dp"
                    android:text="1"
                    android:textColor="@color/black"
                    android:textStyle="normal">
                </TextView>

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="218dp"
                    android:src="@drawable/qr_code">

                </ImageView>


            </LinearLayout>
</LinearLayout>
